kernel: clean up device tree handling
The current device tree handling is a mess regarding naming. Try
to avoid confusion by consistently talking about "Device Tree Source"
when referring to .dts files, "Device Tree Binary" when referring to
.dtb files and "Device Tree Compiler" when referring to dtc.

It should now be able to handle a number of use-cases:

 - a compiled device tree is provided (.dtb)
 - a device tree source file should be compiled
	- using external dtc
	- using kernel dtc
	- using the in-kernel make target
 - flags can be given to the in-kernel dtc

Also clean up documentation, talking about kernel images when
explaing device tree variables.

--- a/conf/kernel.conf
+++ b/conf/kernel.conf
@@ -13,11 +13,11 @@ KERNEL_IMAGE_DEPLOY_EXT ?= ".bin"
 KERNEL_IMAGE_DEPLOY_FILE ?= "${MACHINE}-${KERNEL_IMAGE_DEPLOY_NAME}-${PV}-${DATETIME}${KERNEL_IMAGE_DEPLOY_EXT}"
 KERNEL_IMAGE_DEPLOY_LINK ?= "${MACHINE}-${KERNEL_IMAGE_DEPLOY_NAME}${KERNEL_IMAGE_DEPLOY_EXT}"
 
-KERNEL_DEVICETREE ?= ""
-KERNEL_DEVICETREE_FILENAME ?= "dtb"
-KERNEL_DEVICETREE_DEPLOY_NAME ?= "${KERNEL_IMAGE_DEPLOY_NAME}"
-KERNEL_DEVICETREE_DEPLOY_EXT ?= ".dtb"
-KERNEL_DEVICETREE_DEPLOY_FILE ?= "${MACHINE}-${KERNEL_DEVICETREE_DEPLOY_NAME}-${PV}-${DATETIME}${KERNEL_DEVICETREE_DEPLOY_EXT}"
-KERNEL_DEVICETREE_DEPLOY_LINK ?= "${MACHINE}-${KERNEL_DEVICETREE_DEPLOY_NAME}${KERNEL_DEVICETREE_DEPLOY_EXT}"
+KERNEL_DTB ?= ""
+KERNEL_DTB_FILENAME ?= "dtb"
+KERNEL_DTB_DEPLOY_NAME ?= "${KERNEL_IMAGE_DEPLOY_NAME}"
+KERNEL_DTB_DEPLOY_EXT ?= ".dtb"
+KERNEL_DTB_DEPLOY_FILE ?= "${MACHINE}-${KERNEL_DTB_DEPLOY_NAME}-${PV}-${DATETIME}${KERNEL_DTB_DEPLOY_EXT}"
+KERNEL_DTB_DEPLOY_LINK ?= "${MACHINE}-${KERNEL_DTB_DEPLOY_NAME}${KERNEL_DTB_DEPLOY_EXT}"
 
 KERNEL_OUTPUT ?= "Module.symvers System.map vmlinux"
